# soy-factory

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SYSTEM_REQUIREMENTS.md  designer.py  docker-compose.yml  inbound_invoice_pdf.py  pyproject.toml  soy_pc.py
access_controller/: access_controller.ino
docs/: er-diagram.md  soy-kit-protocol.md  system-requirements.md
fonts/: README.md
register_controller/: register_controller.ino
soy-controller/: soy_controller.ino
soy-db/: Dockerfile  README.md  docker-compose.yml  schema.sql
soy-pc/: db.py  icons.py  main.py  pyproject.toml  serial_rfid.py  soy-pc.ui  theme.py
soy-pc/api/: __init__.py  client.py
soy-pc/db/: __init__.py  admin.py  connection.py  worker.py
soy-pc/features/: __init__.py  admin_registration.py  admin_screen.py  lock_screen.py  worker_screen.py
soy-pc/ui/: admin_registration_dialog.ui  admin_screen.ui  lock_screen.ui  main_window.ui  password_dialog.ui  worker_edit_dialog.ui  worker_info_dialog.ui  worker_registration_dialog.ui  worker_screen.ui
soy-server/: Dockerfile  alembic.ini  entrypoint.sh
soy-server/alembic/: README  env.py
soy-server/alembic/versions/: 001_create_admin_worker_access_log.py  002_rename_worker_access_log_to_plural.py  003_create_products_and_seed.py  004_create_inbound_info.py
soy-server/app/: auth.py  database.py  main.py  pc_bridge.py  workers.py
